// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ddbjson CLI marshall command success should print JSON returned from get argument 1`] = `
[
  {
    "test1": {
      "L": [
        {
          "N": "1"
        },
        {
          "N": "2"
        },
        {
          "N": "3"
        }
      ]
    }
  }
]
`;

exports[`ddbjson CLI marshall command success should print JSON when given valid JSON array of arrays 1`] = `
[
  [
    {
      "L": [
        {
          "M": {
            "foo": {
              "S": "bar"
            }
          }
        },
        {
          "M": {
            "baz": {
              "S": "qux"
            }
          }
        }
      ]
    },
    {
      "L": [
        {
          "M": {
            "foo": {
              "S": "bar"
            }
          }
        },
        {
          "M": {
            "baz": {
              "S": "qux"
            }
          }
        }
      ]
    }
  ]
]
`;

exports[`ddbjson CLI marshall command success should print JSON when given valid JSON file 1`] = `
[
  {
    "object": {
      "M": {
        "array": {
          "L": [
            {
              "S": "a"
            },
            {
              "S": "b"
            },
            {
              "S": "c"
            }
          ]
        },
        "subobject": {
          "M": {
            "key1": {
              "S": "value1"
            },
            "key2": {
              "S": "value2"
            }
          }
        }
      }
    },
    "number": {
      "N": "1"
    },
    "string": {
      "S": "string"
    },
    "boolean": {
      "BOOL": true
    },
    "null": {
      "NULL": true
    }
  }
]
`;

exports[`ddbjson CLI marshall command success should print JSON when given valid JSON stdin 1`] = `
[
  {
    "foo": {
      "S": "bar"
    },
    "baz": {
      "N": "123"
    }
  }
]
`;

exports[`ddbjson CLI marshall command success should print JSON when given valid JSON string 1`] = `
[
  {
    "foo": {
      "S": "bar"
    }
  }
]
`;

exports[`ddbjson CLI unmarshall command success should print JSON returned from get argument 1`] = `
[
  {
    "object": {
      "test": "value"
    }
  }
]
`;

exports[`ddbjson CLI unmarshall command success should print JSON when given valid JSON array 1`] = `
[
  [
    {
      "object": {
        "key1": "value1",
        "key2": "value2"
      }
    },
    {
      "object": {
        "key3": "value3",
        "key4": "value4"
      }
    }
  ]
]
`;

exports[`ddbjson CLI unmarshall command success should print JSON when given valid JSON array of arrays 1`] = `
[
  [
    [
      {
        "foo": "bar"
      },
      {
        "baz": "qux"
      }
    ],
    [
      {
        "foo": "bar"
      },
      {
        "baz": "qux"
      }
    ]
  ]
]
`;

exports[`ddbjson CLI unmarshall command success should print JSON when given valid JSON file 1`] = `
[
  {
    "object": {
      "array": [
        "a",
        "b",
        "c"
      ],
      "subobject": {
        "key1": "value1",
        "key2": "value2"
      }
    },
    "number": 1,
    "string": "string",
    "boolean": true,
    "null": null
  }
]
`;

exports[`ddbjson CLI unmarshall command success should print JSON when given valid JSON stdin 1`] = `
[
  {
    "foo": "bar",
    "baz": 123
  }
]
`;

exports[`ddbjson CLI unmarshall command success should print JSON when given valid JSON string 1`] = `
[
  {
    "foo": "bar"
  }
]
`;
